@@ -1,3 +1,8 @@
+2018-05-26 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCpeeph.c:
+	  Fix bug #2753.
+
 2018-05-24 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/stm8/peeph.def:
